CORS対策を追加

--- a/public/css/comfortable-sakai.css
+++ b/public/css/comfortable-sakai.css
@@ -744,6 +744,10 @@
     width: 65px;
 }
 
+.cp-settings-inputbox-wide {
+    width: 100%;
+}
+
 .cs-memo-item {
     padding-top: 5px;
     display: block;
