--- a/public/css/comfortable-sakai.css
+++ b/public/css/comfortable-sakai.css
@@ -805,4 +805,22 @@ input:checked + .cs-toggle-slider:after {
     left: calc(100% - 5px);
     transform: translateX(-100%);
 }
+details {
+    padding-top: 10px;
+  }
 
+details summary {
+    list-style: none;
+    cursor: pointer;
+  }
+  details summary::-webkit-details-marker {
+    display: none;
+  }
+
+details summary::before {
+    content: "▶ ";
+  }
+
+  details[open] summary::before {
+    content: "▼ ";
+  }
